[B]3.0.9~nightly8[/B]
- Neues Update Openload Pairing Hoster (sources.py)

[B]3.0.9~nightly7[/B]
-  Openload Pairing update Rückgängig gemacht

[B]3.0.9~nightly6[/B]
- Bugfix addon.xml

[B]3.0.9~nightly5[/B]
- Update Openload Pairing Hoster (sources.py)

[B]3.0.9~nightly4[/B]
- Option "Hoster ausschließen" hinzugefügt
	Die Option ermöglicht es einzelne Hoster auszuschließen ohne Einstellungen im URL-Resolver zu ändern
	Filter wird nicht auf Debrid-Dienste angewandt

[B]3.0.9~nightly3[/B]
- Amazon Suche verbessert

[B]3.0.9~nightly2[/B]
- updates/fixes (sourcespy, settings.xml, 

[B]3.0.9~nightly1[/B]
- Add Bald verfügbar Kategorie (tvshows/movies/navigator.py)
	Unter "Bald verfügbar" findet man eine Vorschau von Filmen/Serien die
	bald veröffentlicht werden (maximal 100, über Trakt realisiert). Zu
	beachten ist dass es bei sehr neuen Veröffentlichungen sein kann dass
	noch keine Informationen verfügbar sind.

[B]3.0.8.1[/B]
  14.02.2019
- Bug Fix s.to (es werden zu wenig HD-Streams angezeigt)
- Das ausblenden der Hosternamen etc. bei aktiviertem Autoplay ist jetzt einstellbar

[B]3.0.8[/B]
  13.02.2019
- Fix Kino.cx 
- Bei aktiviertem Autoplay werden bei der Suche die Hosternamen etc. nicht mehr angezeigt.
- Fix Filmpalast
- Fix Foxx
- Update settings.xml
- Fix HDFilme
- QuickSearch und normale Suche (Listview) funktionieren beide wieder
- Update cfscrape
- Fix nach Personen suchen im QuickSearch Dialog
- Anzeigen, auch englischer Streams von s.to
- Fix für cfscrape 
kinoger, cine, stream-to laufen mit dem neuen cfscrape

[B]3.0.7[/B]
  03.02.2019
- Downgrade auf Stand von v3.0.5 (Da sich wahrscheinlich ein Fehler in v3.0.6 eingeschlichen hat)
- Offline Seiten entfernt
  view4u.co, szene-streamz.com, movie2k.st
- [settings.xml] Menü neu geordnet und neu Strukturiert
- Fix settings.xml Menü Bug
- Update source_faultlog Url

  Entfernt:
  - UpNext Funktion im Lastship Menue
  - Anzeigen, auch englischer Streams von s.to

[B]3.0.6[/B]
  01.02.2019