@@ -1,39 +1,8 @@
 # -*- coding: UTF-8 -*-
 
-"""
-    Lastship Add-on (C) 2019
-    Credits to Placenta and Covenant; our thanks go to their creators
-
-    This program is free software: you can redistribute it and/or modify
-    it under the terms of the GNU General Public License as published by
-    the Free Software Foundation, either version 3 of the License, or
-    (at your option) any later version.
-
-    This program is distributed in the hope that it will be useful,
-    but WITHOUT ANY WARRANTY; without even the implied warranty of
-    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-    GNU General Public License for more details.
-
-    You should have received a copy of the GNU General Public License
-    along with this program.  If not, see <http://www.gnu.org/licenses/>.
-"""
-
-# Addon Name: Lastship
-# Addon id: plugin.video.lastship
-# Addon Provider: LastShip
-
 import re
-import os
-import xbmc
-import urllib
-
 import requests
-import simplejson
-
 import difflib
-
-from resources.lib.modules import control
-from resources.lib.modules import source_utils
 from resources.lib.modules import cleantitle
 
 BaseUrl = 'https://www.amazon.de'
@@ -47,34 +16,23 @@ class source:
         self.priority = 1
         self.language = ['de']
 
-
-    
-
     def movie(self, imdb, title, localtitle, aliases, year):
         try:
-
-            url = self.__search(localtitle,year)
-           
+            url = self.__search(localtitle,year)           
             return url
         except:
             return url
 
     def tvshow(self, imdb, tvdb, tvshowtitle, localtvshowtitle, aliases, year):
-
-        url=cleantitle.getsearch(localtvshowtitle)
-                
+        url=cleantitle.getsearch(localtvshowtitle)                
         return url
 
     def episode(self, url, imdb, tvdb, title, premiered, season, episode):        
-        localtitle=url
-        
+        localtitle=url        
             
         ### Query Serie
-
         url="https://atv-ps-eu.amazon.de/cdp/catalog/Search?firmware=fmw:17-app:2.0.45.1210&deviceTypeID=A2M4YX06LWP8WI&deviceID=1&format=json&version=2&formatVersion=3&marketplaceId=A1PA6795UKMFR9&IncludeAll=T&AID=1&searchString="+localtitle+"&OfferGroups=B0043YVHMY&SuppressBlackedoutEST=T&NumberOfResults=40&StartIndex=0"
-        #print "print AP query series url", url
-        
-        easin=""
+
         data = requests.get(url).json()
        
         for i in data['message']['body']['titles']:
@@ -94,21 +52,15 @@ class source:
                             easin=str(i['childTitles'][0]['feedUrl'])
                             break;
                     except:
-                            easin="ERROR"
-                    
+                            easin="ERROR"                    
             except:
                 continue
-
-            
-      
-        
         
         ## if notempty ##
-        if easin:
-            
+        if easin:            
             url="https://atv-ps-eu.amazon.de/cdp/catalog/Browse?firmware=fmw:17-app:2.0.45.1210&deviceTypeID=A2M4YX06LWP8WI&deviceID=d24ff55e99d2e8d6353cd941f9f63fbb3d242b92576e09b6b8a90660&format=json&version=2&formatVersion=3&marketplaceId=A1PA6795UKMFR9&"+easin
             data = requests.get(url).json()
-
+            
             for i in data['message']['body']['titles']:
             
             ## Titel abgleich ##
@@ -124,28 +76,20 @@ class source:
                             break;
                 except:
                     continue
-        
-          
-           
-                
-        
-            #print "print AP Return URL!!",videoid
+
             return videoid
         else:
             return
 
     def sources(self, url, hostDict, hostprDict):
         sources = []
-        #print "print AP sources Video ID",url
+        
         try:
             if not url:
                 return sources
-
-            
-
                          
             sources.append({'source': 'Prime', 'quality': '1080p', 'language': 'de', 'url':'plugin://plugin.video.amazon-test/?mode=PlayVideo&asin='+url , 'info': '', 'direct': True,'local': True, 'debridonly': False})
-           
+            
             return sources
         except:
             return sources
@@ -153,28 +97,22 @@ class source:
     def resolve(self, url):        
         return url
 
-    def __search(self, localtitle,year):
+    def __search(self, localtitle,year):        
         localtitle=cleantitle.getsearch(localtitle)
         
         query="https://atv-ps-eu.amazon.de/cdp/catalog/Search?firmware=fmw:17-app:2.0.45.1210&deviceTypeID=A2M4YX06LWP8WI&deviceID=1&format=json&version=2&formatVersion=3&marketplaceId=A1PA6795UKMFR9&IncludeAll=T&AID=1&searchString="+str(localtitle)+"&NumberOfResults=10&StartIndex=0&Detailed=T"
-
       
         data = requests.get(query).json()
-       
 
-        ## Ende JSON ReponseObjekt ##
-
-        ## 1. korrekten Titel bestimmen ##
         streams = []
         for i in data['message']['body']['titles']:            
             stream = {'amazontitle' : '', 'ratio' : '', 'asin' : ''}
             try:
-                amazontitle =re.sub("\[dt.\/OV\]","",str(i['title']))
-                amazontitle = unicode(cleantitle.getsearch(amazontitle))
-                ratio=difflib.SequenceMatcher(None, localtitle, amazontitle).ratio()
-
+                amazontitle =re.sub("\[dt.\/OV\]","",str(i['title']))                
+                amazontitle = unicode(cleantitle.getsearch(amazontitle))                
+                ratio=difflib.SequenceMatcher(None, localtitle, amazontitle).ratio()                
                 amazonyear = int(str(i['releaseOrFirstAiringDate']['valueFormatted'])[0:4])
-                year = int(year)
+                year = int(year)                
                 year_ok = False
                 for x in range(year-1, year+1):
                     if amazonyear == x:
@@ -183,21 +121,23 @@ class source:
                 stream['ratio'] = ratio
             except:
                 continue
-            #if float(ratio) > float(0.5):
-            ## 2. bestimmen ob im Prime Abo ##
-            prime=i['formats'][0]['offers'][0]['offerType']
-            
-            if prime == "SUBSCRIPTION":                    
-                asin = i['titleId']
-                stream['asin'] = asin
-            
-            if year_ok == True:
-                streams.append(stream)
 
-        streams = sorted(streams, key = lambda i: i['ratio'])   
-        best_asin = streams[len(streams)-1]['asin']
-        return best_asin
-
-    
-
+            # Der Ratio benötigt ein minimal Wert,da ansosnten ein xbeliebiger ander match genommen wird
+            if float(stream['ratio']) > float(0.5):
+                
+                prime=i['formats'][0]['offers'][0]['offerType']
+                                
+                if prime == "SUBSCRIPTION":                    
+                    asin = i['titleId']
+                    stream['asin'] = asin
+                else:
+                    continue;
+                
+                if year_ok == True:                    
+                    streams.append(stream)
+            else:
+                continue                
         
+        streams = sorted(streams, key = lambda i: i['ratio'])        
+        best_asin = streams[len(streams)-1]['asin']        
+        return best_asin
